--- a/src/components/PrivateChat/PrivateChat.styl
+++ b/src/components/PrivateChat/PrivateChat.styl
@@ -50,9 +50,8 @@
             overflow: hidden;
         }
         .Player::before {
-            margin-top: 5px;
-            padding-right: 10px;
-            font-size: 0.8em;
+            font-size: 0.8em; // a nice big presence indicator looks good here.
+            padding-right: 0.6rem;
         }
 
         .fa, .ogs-goban {
